objects/FW_Service_Headers__mdt.object
<CustomObject>
    <fields>
        <fullName>AcceptEncoding__c</fullName>
        <label>AcceptEncoding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentEncoding__c</fullName>
        <label>ContentEncoding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentLength__c</fullName>
        <label>ContentLength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>ContentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FW Service Headers</label>
    <pluralLabel>FW Service Headers</pluralLabel>
</CustomObject>